--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container-fluid">
+      <%= render "common/flashes" %>
+      <%= render "common/navbar" %>
+      <%= yield %>
+    </div>
   </body>
 </html>
