--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -4,13 +4,14 @@
     <tr>
       <th>项目名称</th>
       <th>项目描述</th>
-      <th>投票数</th>
+      <th colspan="2">投票数</th>
     </tr>
     <% @projects.each do |project| %>
       <tr>
         <td><%= project.name %></td>
         <td><%= project.description %></td>
-        <td></td>
+        <td><%= pluralize(project.votes.count, "vote") %></td>
+        <td><%= button_to '+1', upvote_project_path(project), method: :post %></td>
       </tr>
     <% end %>
   </table>
